# Parallel_Computing

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: build-test.yml
GPU_ACCEL_SORTING/: CMakeLists.txt  GPU_Sorting.cu  gpu_sorting_enhanced.cu
MPI_Clustering_Training/: CMakeLists.txt  KMeans.h  KMeansMPI.h  hw5  kmean_color_test  kmean_colors.html  kmean_colors_MPI.html  output.txt
docs/: ALGORITHM.md  PROJECT_STATUS.md  SETUP.md
